overflow-y thing fixed so only one scroll bar appears in reviews

--- a/style.css
+++ b/style.css
@@ -161,7 +161,7 @@ body{
 	/*padding-top: 20px;*/
     display: flex;
     flex-direction: column;
-	overflow-y: scroll;
+
 	overflow-x: hidden;
     height: 90vh;
 }
